# ramen

./: .clippy.toml  .gitignore  .local_vimrc  .syntasticrc  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  bochsrc  bors.toml  cargo_settings.json  grub.cfg  os.ld  package.json  run_clippy.sh  run_qemu.sh  rustfmt.toml  test_per_crate.sh  trace.event
bootx64/: Cargo.toml
bootx64/.cargo/: config.toml
bootx64/src/: debug.rs  edid.rs  elf.rs  exit.rs  fs.rs  gop.rs  init.rs  jump.rs  kernel.rs  lib.rs  main.rs  mem.rs  memory.rs  rsdp.rs
bootx64/src/fs/: kernel.rs  kernel_bytes.rs  mod.rs  root_dir.rs  size.rs
bootx64/src/fs/kernel/: mod.rs  size.rs
bootx64/src/kernel/: kernel_bytes.rs
bootx64/src/mem/: free_page.rs  heap.rs  map.rs  mod.rs  paging.rs  stack.rs
common/: Cargo.toml
common/src/: boot.rs  constant.rs  debug.rs  kernelboot.rs  lib.rs  mem.rs  size.rs  vram.rs
common/src/mem/: mod.rs  reserved.rs
fm/: Cargo.toml  fm.ld
fm/src/: heap.rs  lib.rs  sync.rs
frame_manager/: Cargo.toml
frame_manager/src/: lib.rs
fs_server/: Cargo.toml
fs_server/src/: lib.rs
heap/: Cargo.toml
heap/src/: lib.rs
kernel/: Cargo.toml  build.rs  kernel.ld  os.ld  x86_64-unknown-ramen.json
kernel/.cargo/: config.toml
kernel/memlib/: lib.c
kernel/memory/: Cargo.toml
kernel/memory/src/: accessor.rs  lib.rs  paging.rs
kernel/memory/src/allocator/: acpi.rs  heap.rs  mod.rs  phys.rs  virt.rs
kernel/page_box/: Cargo.toml
kernel/page_box/src/: lib.rs
kernel/src/: accessor.rs  acpi.rs  allocator.rs  asm.s  fs.rs  gdt.rs  graphics.rs  idt.rs  initrd.s  interrupt.rs  lib.rs  main.rs  panic.rs  process.rs  qemu.rs  qemu.s  queue.rs  sound_data.rs  syscall.rs  sysproc.rs  tss.rs
kernel/src/accessor/: mod.rs  single_object.rs  slice.rs
kernel/src/boot/: main.s  multiboot.s  save_multiboot_addr.s
kernel/src/device/: extended_capability.rs  keyboard.rs  mod.rs  mouse.rs  pci.rs  xhci.rs
kernel/src/device/pci/: config.rs  extended_capability.rs  mod.rs
kernel/src/device/pci/ahci/: ahc.rs  mod.rs  port.rs
kernel/src/device/pci/config/: bar.rs  common.rs  endpoint.rs  mod.rs  msi_x.rs
kernel/src/device/pci/hda/: mod.rs  registers.rs  sound_data.rs
kernel/src/device/pci/xhci/: command_runner.rs  context.rs  dcbaa.rs  device_slot.rs  exchanger.rs  mod.rs  port.rs  xhc.rs
kernel/src/device/xhci/: capability_register.rs  mod.rs  register.rs  usb_leg_sup.rs
kernel/src/device/xhci/register/: mod.rs  (+3 more)
kernel/src/fs/: mod.rs  ustar.rs
kernel/src/graphics/: font.rs  layer.rs  log.rs  mod.rs  screen.rs  vram.rs  writer.rs
kernel/src/graphics/screen/: cursor.rs  desktop.rs  layer.rs  log.rs  mod.rs  writer.rs
kernel/src/interrupt/: handler.rs  handler.s  idt.rs  mod.rs  mouse.rs  pic.rs  timer.rs
kernel/src/interrupt/apic/: io.rs  local.rs  mod.rs  pic.rs
kernel/src/mem/: accessor.rs  elf.rs  mod.rs  paging.rs
kernel/src/mem/accessor/: mod.rs  single_object.rs  slice.rs
kernel/src/mem/allocator/: acpi.rs  heap.rs  kpbox.rs  mod.rs  page_box.rs  phys.rs  virt.rs
kernel/src/mem/paging/: mod.rs  pml4.rs
kernel/src/multitask/: executor.rs  mod.rs  task.rs
kernel/src/process/: collections.rs  context.rs  creator.rs  exit.rs  ipc.rs  manager.rs  message.rs  mod.rs  page_table.rs  pid.rs  priority.rs  receive_from.rs  scheduler.rs  slot_id.rs  stack_frame.rs  status.rs  switch.rs
kernel/src/process/collections/: mod.rs  pid.rs  process.rs  woken_pid.rs
kernel/src/terminal/: log.rs  vram.rs  writer.rs
kernel/src/tests/: mem.rs  mod.rs  process.rs  syscall.rs
kernel/src/tests/process/: ipc.rs  mod.rs
libs/boot_info/: Cargo.toml
libs/boot_info/src/: lib.rs  mem.rs  vram.rs
libs/predefined_mmap/: Cargo.toml
libs/predefined_mmap/src/: lib.rs
libs/raheap/: Cargo.toml
libs/raheap/src/: lib.rs
libs/ralib/: Cargo.toml
libs/ralib/src/: io.rs  lib.rs
libs/ralib/src/mem/: accessor.rs  heap.rs  mod.rs
libs/syscalls/: Cargo.toml  build.rs
libs/syscalls/src/: asm.s  lib.rs
libs/terminal/: Cargo.toml
libs/terminal/src/: font.rs  log.rs  vram.rs  writer.rs
pm/: Cargo.toml
pm/src/: lib.rs
ps2_mouse/: Cargo.toml
ps2_mouse/src/: lib.rs
ralib/: Cargo.toml
ralib/src/: io.rs  lib.rs
ralib/src/mem/: accessor.rs  heap.rs  mod.rs
servers/fs/: Cargo.toml
servers/fs/.cargo/: config.toml
servers/fs/src/: lib.rs
servers/pm/: Cargo.toml
servers/pm/src/: lib.rs
servers/port_server/: Cargo.toml
servers/port_server/src/: lib.rs  port.rs
servers/xhci/: Cargo.toml
servers/xhci/src/: lib.rs  xhc.rs
servers/xhci/src/exchanger/: command.rs  receiver.rs  transfer.rs
servers/xhci/src/multitask/: executor.rs  task.rs
servers/xhci/src/port/: endpoint.rs  mod.rs  spawner.rs
servers/xhci/src/structures/: context.rs  dcbaa.rs  descriptor.rs  extended_capabilities.rs  registers.rs  scratchpad.rs
syscalls/: Cargo.toml
syscalls/src/: asm.s  lib.rs
sysproc/: Cargo.toml
sysproc/src/: lib.rs  port.rs
terminal/: Cargo.toml
terminal/src/: font.rs  lib.rs  log.rs  vram.rs  writer.rs
vm/: Cargo.toml  vm.ld
vm/src/: frame.rs  lib.rs  process.rs  table_box.rs
vm/src/page_table/: boxed.rs  collection.rs  mapper.rs  mod.rs
xhci/: Cargo.toml
xhci/.cargo/: config.toml
xhci/src/: lib.rs  main.rs  msi_x.rs  xhc.rs
xhci/src/device/: mod.rs
xhci/src/device/pci/: mod.rs
xhci/src/exchanger/: command.rs  receiver.rs  transfer.rs
xhci/src/multitask/: executor.rs
xhci/src/pci/config/: common.rs  extended_capability.rs  mod.rs
xhci/src/port/: endpoint.rs  mod.rs
xhci/src/port/class_driver/: keyboard.rs  mouse.rs
xhci/src/port/init/: endpoints_initializer.rs  fully_operational.rs  max_packet_size_setter.rs  resetter.rs  slot_structures_initializer.rs
xhci/src/structures/: context.rs  descriptor.rs  extended_capabilities.rs  registers.rs  scratchpad.rs
xhci_server/: Cargo.toml
xhci_server/.cargo/: config.toml
xhci_server/src/: lib.rs  main.rs
xhci_server/src/exchanger/: command.rs
xhci_server/src/multitask/: executor.rs  task.rs
xhci_server/src/structures/: context.rs  scratchpad.rs
(+271 files in other folders)
