[package]
name = "ramen"
version = "0.3.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

# I don't know why lto = false causes some problems like not print the correct words on the screen.
lto = true

[profile.release]
opt-level = 3
lto = true

[lib]
name = "ramen_os"
crate-type = ["staticlib"]

[dependencies]
spin = "0.5.2"
debug = { path = "debug" }
common_items = { path = "common_items" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = "0.11.2"
