[workspace]
members = [
    "bootx64",
    "kernel",
    "libs/boot_info",
    "libs/common",
    "libs/frame_manager",
    "libs/message",
    "libs/page_box",
    "libs/predefined_mmap",
    "libs/raheap",
    "libs/ralib",
    "libs/syscalls",
    "libs/terminal",
    "servers/do_nothing",
    "servers/fs",
    "servers/pm",
    "servers/port_server",
    "servers/vm",
    "servers/xhci",
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
