[package]
name = "bootx64"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "bootx64"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies]
log = "0.4.14"
uefi = { version = "0.12.0", features = ["logger"] }
uefi-services = "0.9.0"
common = { path = "../libs/common/" }
x86_64 = "0.14.4"
elf_rs = "0.1.3"
os_units = "0.4.2"
predefined_mmap = { path = "../libs/predefined_mmap" }
boot_info = { path = "../libs/boot_info" }
vek = { version = "0.15.3", features = ["libm"], default-features = false }
static_assertions = "1.1.0"
