[package]
name = "bootx64"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "bootx64"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies]
log = "0.4.14"
uefi = { version = "0.20.0", features = ["logger"] }
uefi-services = "0.11.0"
common = { path = "../libs/common/" }
x86_64 = "0.14.8"
elf_rs = "0.1.3"
os_units = "0.4.2"
predefined_mmap = { path = "../libs/predefined_mmap" }
boot_info = { path = "../libs/boot_info" }
vek = { version = "0.15.6", features = ["libm"], default-features = false }
static_assertions = "1.1.0"
