[package]
name = "bootx64"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "bootx64"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies]
log = "0.4.20"
uefi = { version = "0.24.0", features = ["logger"] }
uefi-services = "0.21.0"
common = { path = "../libs/common/" }
x86_64 = "0.14.10"
elf_rs = "0.3.0"
os_units = "0.4.2"
predefined_mmap = { path = "../libs/predefined_mmap" }
boot_info = { path = "../libs/boot_info" }
vek = { version = "0.16.1", features = ["libm"], default-features = false }
static_assertions = "1.1.0"
