[package]
name = "common"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.8.0"
x86_64 = "0.13.3"
os_units = "0.3.0"
vek = { version = "0.15.0", default-features = false, features = ["libm"] }
