[package]
name = "common"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
uefi = "0.8.1"
x86_64 = "0.14.1"
os_units = "0.4.0"
vek = { version = "0.15.0", default-features = false, features = ["libm"] }
conquer-once = { version = "0.3.2", default-features = false }
