[package]
name = "common"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
x86_64 = { version = "0.14.3", default-features = false }
uefi = "0.11.0"
os_units = "0.4.0"
vek = { version = "0.15.1", default-features = false, features = ["libm"] }
conquer-once = { version = "0.3.2", default-features = false }
