[package]
name = "fm"
version = "0.1.0"
edition = "2018"

[lib]
name = "fm"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
fm_message = { path = "../fm_message" }
linked_list_allocator = "0.9.0"
ralib = { path = "../ralib", default-features = false }
syscalls = { path = "../syscalls" }
