[package]
name = "fs_server"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
message = { path = "../message" }
syscalls = { path = "../syscalls" }
