[package]
name = "fs_server"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

[lib]
name = "fs_server"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
log = "0.4.14"
message = { path = "../message" }
ralib = { path = "../ralib" }
syscalls = { path = "../syscalls" }
