[package]
name = "heap"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conquer-once = "0.3.2"
linked_list_allocator = "0.8.11"
page_box = { path = "../page_box" }
