[package]
name = "kernel"
version = "0.3.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[features]
default = []
qemu_test = []

[lib]
name = "kernel"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
conquer-once = { version = "0.3.2", default-features = false }
x86_64 = { version = "0.14.4", default-features = false }
linked_list_allocator = "0.9.0"
log = "0.4.14"
vek = { version = "0.15.1", default-features = false, features = ["libm"] }
rgb = "0.8.27"
uefi = "0.11.0"
os_units = "0.4.2"
bit_field = "0.10.1"
num-traits = { version = "0.2.14", default-features = false }
num-derive = "0.3.3"
acpi = "4.0.0"
syscalls = { path = "../libs/syscalls" }
terminal = { path = "../libs/terminal" }
accessor = "0.3.0"
message = { path = "../libs/message" }
bitflags = "1.2.1"
frame_manager = { path = "../libs/frame_manager" }
cstr_core = "0.2.4"
xmas-elf = "0.8.0"
uart_16550 = "0.2.15"
spinning_top = { version = "0.2.4", features = ["nightly"] }
predefined_mmap = { path = "../libs/predefined_mmap" }
boot_info = { path = "../libs/boot_info" }

[build-dependencies]
cc = "1.0.69"
