[package]
name = "kernel"
version = "0.3.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = []
qemu_test = []

[lib]
name = "kernel"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
conquer-once = { version = "0.4.0", default-features = false }
x86_64 = { version = "0.14.8", default-features = false }
linked_list_allocator = "0.10.1"
log = "0.4.19"
vek = { version = "0.15.6", default-features = false, features = ["libm"] }
rgb = "0.8.31"
os_units = "0.4.2"
bit_field = "0.10.1"
num-traits = { version = "0.2.14", default-features = false }
num-derive = "0.3.3"
acpi = "4.1.0"
syscalls = { path = "../libs/syscalls" }
terminal = { path = "../libs/terminal" }
accessor = "0.3.0"
message = { path = "../libs/message" }
frame_manager = { path = "../libs/frame_manager" }
cstr_core = "0.2.5"
uart_16550 = "0.2.16"
spinning_top = { version = "0.2.4", features = ["nightly"] }
predefined_mmap = { path = "../libs/predefined_mmap" }
boot_info = { path = "../libs/boot_info" }
qemu-exit = "3.0.1"
elfloader = "0.14.0"
aligned_ptr = "0.1.0"
static_assertions = "1.1.0"
array-init = "2.0.0"

[build-dependencies]
cc = "1.0.73"
