[package]
name = "pm"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

[lib]
name = "pm"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
message = { path = "../message" }
num-traits = { version = "0.2.14", default-features = false }
ralib = { path = "../ralib" }
syscalls = { path = "../syscalls" }
