[package]
name = "ps2_mouse"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
conquer-once = { version = "0.3.2", default-features = false }
crossbeam-queue = { version = "0.3.1", features = ["alloc"], default-features = false }
syscalls = { path = "../syscalls" }
vek = { version = "0.14.0", features = ["libm"], default-features = false }
