[package]
name = "ralib"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conquer-once = "0.3.2"
linked_list_allocator = "0.8.11"
os_units = "0.3.0"
page_box = { path = "../page_box" }
x86_64 = "0.13.4"
