[package]
name = "syscalls"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
os_units = "0.2.5"
x86_64 = "0.12.3"
