[package]
name = "terminal"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

[features]
default = []
qemu_test = []

[dependencies]
common = { path = "../common" }
conquer-once = { version = "0.3.2", default-features = false }
log = "0.4.14"
rgb = "0.8.25"
spinning_top = { version = "0.2.2", features = ["nightly"] }
uart_16550 = "0.2.12"
vek = { version = "0.14.0", default-features = false, features = ["libm"] }
