[package]
name = "terminal"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
conquer-once = { version = "0.3.2", default-features = false }
log = "0.4.14"
rgb = "0.8.27"
spinning_top = { version = "0.2.4", features = ["nightly"] }
vek = { version = "0.15.1", default-features = false, features = ["libm"] }
