[package]
name = "vm"
version = "0.1.0"
edition = "2018"

[lib]
name = "vm"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
conquer-once = { version = "0.3.2", default-features = false }
linked_list_allocator = "0.9.0"
ralib = { path = "../ralib", default-features = false }
syscalls = { path = "../syscalls" }
x86_64 = "0.14.2"
