[package]
name = "vm"
version = "0.1.0"
edition = "2018"

[lib]
name = "vm"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
conquer-once = { version = "0.3.2", default-features = false }
linked_list_allocator = "0.9.0"
os_units = "0.4.0"
ralib = { path = "../ralib", default-features = false }
spinning_top = "0.2.4"
syscalls = { path = "../syscalls" }
x86_64 = "0.14.2"
