[package]
name = "xhci_server"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "xhci_server"
test = false
bench = false

[lib]
test = false
bench = false

[dependencies]
accessor = "0.3.0"
bit_field = "0.10.1"
byteorder = { version = "1.4.3", default-features = false }
conquer-once = { version = "0.3.2", default-features = false }
crossbeam-queue = { version = "0.3.1", features = ["alloc"], default-features = false }
derive_builder = { version = "0.10.2", default-features = false }
futures-intrusive = { version = "0.4.0", features = ["alloc"], default-features = false }
futures-util = { version = "0.3.15", features = ["alloc"], default-features = false }
log = "0.4.14"
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
os_units = "0.4.0"
page_box = { path = "../page_box" }
ralib = { path = "../ralib" }
spinning_top = { version = "0.2.4", features = ["nightly"] }
syscalls = { path = "../syscalls" }
x86_64 = { version = "0.14.3", default-features = false }
xhci = "0.8.2"
