[package]
name = "boot_info"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
os_units = "0.4.2"
predefined_mmap = { path = "../predefined_mmap" }
vek = { version = "0.15.1", features = ["libm"], default-features = false }
x86_64 = { version = "0.14.6", default-features = false }
