[package]
name = "predefined_mmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conquer-once = { version = "0.3.2", default-features = false }
os_units = "0.4.2"
x86_64 = { version = "0.14.6", default-features = false }
