[package]
name = "raheap"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "raheap"
test = false
bench = false

[dependencies]
conquer-once = { version = "0.4.0", default-features = false }
linked_list_allocator = "0.10.1"
os_units = "0.4.2"
page_box = { path = "../page_box" }
x86_64 = { version = "0.14.8", default-features = false }
