[package]
name = "ralib"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

[lib]
name = "ralib"
test = false
bench = false

[dependencies]
os_units = "0.4.2"
log = "0.4.14"
syscalls = { path = "../syscalls" }
x86_64 = { version = "0.14.4", default-features = false }
accessor = "0.3.0"
