[package]
name = "syscalls"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"

[dependencies]
message = { path = "../message" }
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
os_units = "0.4.2"
x86_64 = { version = "0.14.4", default-features = false }

[build-dependencies]
cc = "1.0.69"
