[package]
name = "terminal"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
bit_field = "0.10.1"
boot_info = { path = "../boot_info" }
conquer-once = { version = "0.3.2", default-features = false }
font8x8 = { version = "0.3.1", features = ["unicode"], default-features = false }
log = "0.4.14"
predefined_mmap = { path = "../predefined_mmap" }
rgb = "0.8.29"
spinning_top = { version = "0.2.4", features = ["nightly"] }
vek = { version = "0.15.1", default-features = false, features = ["libm"] }
