[package]
name = "fs"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
name = "fs"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
log = "0.4.14"
message = { path = "../../libs/message" }
raheap = { path = "../../libs/raheap" }
ralib = { path = "../../libs/ralib" }
syscalls = { path = "../../libs/syscalls" }
