[package]
name = "pm"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
name = "pm"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
message = { path = "../../libs/message" }
num-traits = { version = "0.2.14", default-features = false }
raheap = { path = "../../libs/raheap" }
ralib = { path = "../../libs/ralib" }
syscalls = { path = "../../libs/syscalls" }
