[package]
name = "port_server"
version = "0.1.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
name = "port_server"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
log = "0.4.14"
message = { path = "../../libs/message" }
num-derive = "0.3.3"
num-traits = { version = "0.2.14", default-features = false }
raheap = { path = "../../libs/raheap" }
ralib = { path = "../../libs/ralib" }
syscalls = { path = "../../libs/syscalls" }
x86_64 = "0.14.4"
